Set filter dropdown to be hidden by default, show only available information for information window, clicking on window tab launches information window of place, search box overlaps with map, fixed some bugs for recommendations

--- a/Orbital/views/app.css
+++ b/Orbital/views/app.css
@@ -37,6 +37,7 @@ body {
     padding: 0;
     font-family: var(--body-font);
     font-size: var(--body-size);
+    position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -108,8 +109,19 @@ ul li {
 }
 
 #map {
+    position: absolute;
     height: 600px;
     width: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
+#pac-card {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 500px;
 }
 
 .empty-space {
